--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --env-file=.env server.js",
-    "build": "node --env-file=.env server.js"
+     "build": "netlify deploy --prod"
   },
   "author": "mukilan",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "serverless-http": "^3.2.0"
   }
 }
