--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
-  functions = "functions"
+  functions = "netlify/functions"
 
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/app"
+  status = 200
