--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
   from = "/*"
   to = "/.netlify/functions/app"
   status = 200
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
