--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,10 @@
   from = "/*"
   to = "/.netlify/functions/app"
   status = 200
+
 [[headers]]
   for = "/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "*"
+    Access-Control-Allow-Headers = "*"
