--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --env-file=.env server.js",
-    "build": "netlify deploy --prod"
+    "build": "node server.js"
   },
   "author": "mukilan",
   "license": "ISC",
