--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.3",
-    "serverless-http": "^3.2.0"
+    "nodemon": "^3.1.3"
   }
 }
