--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,11 @@
       "use": "@vercel/static"
     }
   ],
-	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  
+	 "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/server.js"
+    }
+  ]
 }
