--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,19 @@
 {
-	"version": 2,
-	 "builds": [
+  "version": 2,
+  "builds": [
     {
-      "src": "server.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "uploads/**",
-      "use": "@vercel/static"
     }
   ],
-  
-	 "routes": [
+  "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/server.js"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/uploads/images/(.*)",
+      "dest": "/uploads/images/$1"
     }
   ]
 }
