--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.3"
   }
 }
